# Portfolio

./: .gitignore  Neurospace Hacklytics 2026  Veritas AI (HackMIT)  package.json
EasyAgent/: README.md
EasyAgent (HackPrinceton Contribution)/: README.md  package-lock.json
EasyAgent (HackPrinceton Contribution)/src/backend/: pyproject.toml  toolset_inspector.py
EasyAgent (HackPrinceton Contribution)/src/backend/TextProcessing/: DebugPromptInput.py  aids.txt  testttt.txt
EasyAgent (HackPrinceton Contribution)/src/backend/mcpgen/: __init__.py
EasyAgent (HackPrinceton Contribution)/src/backend/mcpgen.egg-info/: requires.txt
EasyAgent (HackPrinceton Contribution)/src/backend/tests/: test_agent_create_mcp.py  test_mcpgen_toolset.py
EasyAgent (HackPrinceton Contribution)/src/frontend/: package.json
EasyAgent/src/backend/FAST/: app.py  db.py  demo_stream_dag.py
EasyAgent/src/backend/TextProcessing/: PromptFormat_MCPBlueprint.md  template.txt
EasyAgent/src/backend/mcpgen/: __main__.py  codegen.py
EasyAgent/src/backend/mcpgen.egg-info/: top_level.txt
EasyAgent/src/frontend/: index.html
EasyAgent/src/frontend/src/: index.css
src/backend/FAST/: docker-compose.yml  requirements.txt
src/backend/agents/: agent.py
src/backend/db/: agents.db  workflows.db
src/backend/mcpgen/: util.py  validate_probe.py
src/backend/mcpgen.egg-info/: PKG-INFO  SOURCES.txt
src/backend/tests/: test_app.py
src/frontend/: package-lock.json
src/frontend/src/: App.tsx
src/frontend/src/components/: EditAgentDialog.tsx
(+20 files in other folders)
