[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpgen"
version = "1.0.0"
description = "Generate production-ready FastMCP servers from natural-language tasks"
requires-python = ">=3.10"
dependencies = [
  "jinja2>=3.1",
  "pydantic>=2.9",
  "typing-extensions>=4.9",
  "mcp>=1.6",
  "httpx>=0.27",
  "langchain-core>=0.2",
  "langchain-anthropic>=0.2",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["mcpgen*"]      # only package we want
exclude = ["app*", "agents*", "TextProcessing*"]  # anything else in this folder

[project.scripts]
mcpgen = "mcpgen.__main__:main"
